--- a/user/configs/config.yaml
+++ b/user/configs/config.yaml
@@ -7,8 +7,8 @@ server:
     timeout: 1s
 data:
   database:
-    driver: mysql
-    source: root:root@tcp(127.0.0.1:3306)/test
+    driver: postgres
+    source: "host=localhost user=postgres password=camb dbname=toktik port=5432 sslmode=disable TimeZone=Asia/Shanghai"
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
